nobase_pkginclude_HEADERS =\
	button.h\
	checkbox.h\
	colorpicker.h\
	colorwheel.h\
	combobox.h\
	common.h\
	entypo.h\
	formhelper.h\
	glcanvas.h\
	glutil.h\
	graph.h\
	imagepanel.h\
	imageview.h\
	label.h\
	layout.h\
	messagedialog.h\
	mingw-glext.h\
	mingw-thread.h\
	mingw-mutex.h\
	nanogui.h\
	object.h\
	opengl.h\
	popupbutton.h\
	popup.h\
	progressbar.h\
	python.h\
	screen.h\
	slider.h\
	stackedwidget.h\
	stb_image.h\
	tabheader.h\
	tabwidget.h\
	textbox.h\
	theme.h\
	toolbutton.h\
	vscrollpanel.h\
	widget.h\
	window.h
